@@ -20,8 +20,8 @@
 package org.elasticsearch.painless;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.Map;
 import java.util.stream.IntStream;
 
 import static java.util.stream.Collectors.joining;
@@ -99,7 +99,7 @@ public class ConditionalTests extends ScriptTestCase {
                 "return (\n" +
                 scriptPart +
                 "field == '' ? 'unknown' :\n" +
-                "field);", Map.of("a", "z"), true));
+                "field);", Collections.singletonMap("a", "z"), true));
         }
     }
 }
